# dprint-node

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.js  false  index.d.ts  index.js  options.d.ts  package.json  test.js
.github/: dependabot.yml
.github/workflows/: tag-release.yml
src/: lib.rs
