[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "dprint-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1", features = ["serde-json"] }
napi-derive = "1"
dprint-plugin-typescript = "0.46.0"
dprint-core = "0.42.0"

[build-dependencies]
napi-build = { version = "1" }
