[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "dprint-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
dprint-plugin-typescript = "0.73.1"
dprint-core = "0.58.3"

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[build-dependencies]
napi-build = { version = "1" }
